Set the navbar to have 'position: fixed;' so that it will not scroll. the z-index has been set to 2, this is to keep it at the front. It needs to be 2 because the hero-text element has a z-index of 1 already and the navbar ends up behind it's background image (i.e. the gradient)

--- a/myStyle.css
+++ b/myStyle.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: solid 1px red;
+    /* border: solid 1px red; */
 }
 
 @font-face {
@@ -22,7 +22,9 @@
 
 nav{
     width: 100%;
-    /* background-color: yellow; */
+    position: fixed;
+    background-color: yellow;
+    z-index: 2;
 }
 
 nav > ul{
